fix: stop app logo movement on expand collapse

--- a/frappe/public/scss/desk/sidebar.scss
+++ b/frappe/public/scss/desk/sidebar.scss
@@ -251,7 +251,7 @@ body {
 		.app-switcher-dropdown {
 			width: 204px;
 			left: 0px;
-			padding: 2px 0px 2px 3px;
+			padding: 3px;
 		}
 		.body-sidebar-top {
 			width: 204px;
@@ -346,8 +346,8 @@ body {
 	text-decoration: none;
 	width: 38px;
 	height: 38px;
-	left: -2px;
 	padding: 3px;
+	margin-left: -2px;
 	.standard-sidebar-item {
 		padding-top: 1px;
 		padding-bottom: 1px;
